compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__float_arithmetic.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\npub fn go() -> Float {\n  1.0 +. 2.0 *. 3.5 -. 4.0 /. 2.0\n}\n"
---
----- SOURCE CODE

pub fn go() -> Float {
  1.0 +. 2.0 *. 3.5 -. 4.0 /. 2.0
}


----- COMPILED GO
package thepackage

func Go() float64 {
  return ((float64(1.0) + (float64(2.0) * float64(3.5))) - (float64(4.0) / float64(2.0)))
}
