compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__float_literals.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\npub fn go() -> Float {\n  1.5\n}\n"
---
----- SOURCE CODE

pub fn go() -> Float {
  1.5
}


----- COMPILED GO
package thepackage

func Go() float64 {
  return float64(1.5)
}
