compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__int_arithmetic.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\npub fn go() -> Int {\n  1 + 2 * 3 - 4 / 2 % 3\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  1 + 2 * 3 - 4 / 2 % 3
}


----- COMPILED GO
package thepackage

import prelude "gleam/thepackage/prelude"

func Go() int64 {
  return ((int64(1) + (int64(2) * int64(3))) - prelude.RemInt(prelude.DivInt(int64(4), int64(2)), int64(3)))
}
