compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__int_negate.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\npub fn go() -> Int {\n  -7\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  -7
}


----- COMPILED GO
package thepackage

func Go() int64 {
  return int64(-7)
}
