compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__int_remainder.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\npub fn go(a: Int, b: Int) -> Int {\n  a % b\n}\n"
---
----- SOURCE CODE

pub fn go(a: Int, b: Int) -> Int {
  a % b
}


----- COMPILED GO
package thepackage

import prelude "gleam/thepackage/prelude"

func Go(a int64, b int64) int64 {
  return prelude.RemInt(a, b)
}
